--- a/plugins/sceneinspector/CMakeLists.txt
+++ b/plugins/sceneinspector/CMakeLists.txt
@@ -61,5 +61,5 @@ if(GAMMARAY_BUILD_UI)
         ${gammaray_sceneinspector_ui_plugin_srcs}
     )
 
-    target_link_libraries(gammaray_sceneinspector_ui_plugin gammaray_ui)
+    target_link_libraries(gammaray_sceneinspector_ui_plugin PUBLIC gammaray_ui)
 endif()
