--- a/plugins/translatorinspector/CMakeLists.txt
+++ b/plugins/translatorinspector/CMakeLists.txt
@@ -48,5 +48,5 @@ if(GAMMARAY_BUILD_UI)
         translatorwrapperproxy.cpp
         translatorwrapperproxy.h
     )
-    target_link_libraries(gammaray_translatorinspector_ui gammaray_ui)
+    target_link_libraries(gammaray_translatorinspector_ui PUBLIC gammaray_ui)
 endif()
