--- a/plugins/actioninspector/CMakeLists.txt
+++ b/plugins/actioninspector/CMakeLists.txt
@@ -50,5 +50,5 @@ if(GAMMARAY_BUILD_UI)
         ${gammaray_actioninspector_ui_plugin_srcs}
     )
 
-    target_link_libraries(gammaray_actioninspector_ui_plugin gammaray_ui)
+    target_link_libraries(gammaray_actioninspector_ui_plugin PUBLIC gammaray_ui)
 endif()
