--- a/plugins/eventmonitor/CMakeLists.txt
+++ b/plugins/eventmonitor/CMakeLists.txt
@@ -62,5 +62,5 @@ if(GAMMARAY_BUILD_UI)
         ${gammaray_eventmonitor_ui_plugin_srcs}
     )
 
-    target_link_libraries(gammaray_eventmonitor_ui_plugin gammaray_ui)
+    target_link_libraries(gammaray_eventmonitor_ui_plugin PUBLIC gammaray_ui)
 endif()
