--- a/plugins/kjobtracker/CMakeLists.txt
+++ b/plugins/kjobtracker/CMakeLists.txt
@@ -52,5 +52,5 @@ if(GAMMARAY_BUILD_UI)
         ${gammaray_kjob_ui_plugin_srcs}
     )
 
-    target_link_libraries(gammaray_kjobtracker_ui_plugin gammaray_ui)
+    target_link_libraries(gammaray_kjobtracker_ui_plugin PUBLIC gammaray_ui)
 endif()
