--- a/plugins/localeinspector/CMakeLists.txt
+++ b/plugins/localeinspector/CMakeLists.txt
@@ -64,5 +64,5 @@ if(GAMMARAY_BUILD_UI)
         ${gammaray_localeinspector_plugin_ui_srcs}
     )
 
-    target_link_libraries(gammaray_localeinspector_ui_plugin gammaray_ui)
+    target_link_libraries(gammaray_localeinspector_ui_plugin PUBLIC gammaray_ui)
 endif()
