--- a/plugins/mimetypes/CMakeLists.txt
+++ b/plugins/mimetypes/CMakeLists.txt
@@ -37,5 +37,5 @@ if(GAMMARAY_BUILD_UI)
         SOURCES
         ${gammaray_mimetypes_ui_srcs}
     )
-    target_link_libraries(gammaray_mimetypes_ui gammaray_ui)
+    target_link_libraries(gammaray_mimetypes_ui PUBLIC gammaray_ui)
 endif()
