Fix build on 6.7 for after QDeferredDeleteEvent export reversion (#957)
In the next 6.7 release, this reversion will be done:
https://codereview.qt-project.org/c/qt/qtbase/+/544223
which will break building GammaRay against 6.7
Use static_cast in an explicit specialization
GammaRay::DynamicCast<QDeferredDeleteEvent *, QEvent>
to avoid missing typeinfo errors from linker

* Fix build on 6.7 for after QDeferredDeleteEvent export reversion

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Followup #957: Remove unneeded include

* Followup #957: check qt version before including qcoreevent_p

* Followup #957: QtGlobal for version check

* Followup #957: qt5 ci fix: include metatypedecl in metaprop

* Followup #957: GuiPrivate -> CorePrivate, comment

Requested by @redstrate

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Followup #957: Remove now-unneeded additions

Caught by Waqar in his review.

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/plugins/bluetooth/CMakeLists.txt
+++ b/plugins/bluetooth/CMakeLists.txt
@@ -17,6 +17,6 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         bluetooth.cpp
         bluetooth.h
     )
-    target_link_libraries(gammaray_bluetooth gammaray_core Qt::Bluetooth)
+    target_link_libraries(gammaray_bluetooth gammaray_core Qt::Bluetooth Qt::CorePrivate)
     set_target_properties(gammaray_bluetooth PROPERTIES DISABLE_PRECOMPILE_HEADERS ON)
 endif()
