--- a/plugins/wlcompositorinspector/CMakeLists.txt
+++ b/plugins/wlcompositorinspector/CMakeLists.txt
@@ -38,6 +38,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
             gammaray_core
             gammaray_kitemmodels
             Qt::WaylandCompositor
+            Qt::CorePrivate
             Wayland::Server
         )
 
