--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 ci:
+    skip: [clang-format]
     autoupdate_schedule: monthly
 
 exclude: ^(3rdparty/|cmake/ECM/|cmake/KDAB/|launcher/ui/processlist.*|compat/qasconst.h)
@@ -25,12 +26,12 @@ repos:
   hooks:
   - id: clang-format
 - repo: https://github.com/PyCQA/pylint
-  rev: v3.0.3
+  rev: v3.1.0
   hooks:
   - id: pylint
     exclude: ^(.cmake-format.py|conan/.*/conanfile.py)
 - repo: https://github.com/hhatto/autopep8
-  rev: v2.0.4
+  rev: v2.1.0
   hooks:
   - id: autopep8
     exclude: ^(.cmake-format.py|conan/.*/conanfile.py)
@@ -53,6 +54,7 @@ repos:
     language: ruby
     files: \.(md|mdown|markdown)$
 - repo: https://github.com/fsfe/reuse-tool
-  rev: v2.1.0
+  rev: v3.0.1
   hooks:
   - id: reuse
+    args: [--suppress-deprecation]
