Fix builds would compile parts for both Qt 5 and 6
CMAKE_PREFIX_PATHs that contained both Qt 5 and 6 would trigger
lines specific to both versions of the framework instead of only
running lines specific to the version being used for compilation

Solves #997

--- a/plugins/statemachineviewer/CMakeLists.txt
+++ b/plugins/statemachineviewer/CMakeLists.txt
@@ -49,7 +49,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     if(TARGET Qt::Scxml)
         target_link_libraries(gammaray_statemachineviewer_plugin Qt::Scxml Qt::ScxmlPrivate)
     endif()
-    if(TARGET Qt6::StateMachine)
+    if(QT_VERSION_MAJOR EQUAL 6 AND TARGET Qt6::StateMachine)
         target_link_libraries(gammaray_statemachineviewer_plugin Qt6::StateMachine Qt6::StateMachinePrivate)
     endif()
 endif()
@@ -83,7 +83,7 @@ if(GAMMARAY_BUILD_UI AND GAMMARAY_WITH_KDSME)
         gammaray_ui
     )
 
-    if(TARGET Qt6::StateMachine)
+    if(QT_VERSION_MAJOR EQUAL 6 AND TARGET Qt6::StateMachine)
         target_link_libraries(gammaray_statemachineviewer_ui_plugin Qt6::StateMachine)
     endif()
 endif()
