--- a/plugins/openglsupport/CMakeLists.txt
+++ b/plugins/openglsupport/CMakeLists.txt
@@ -18,7 +18,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         openglsupport.h
     )
     target_link_libraries(gammaray_openglsupport gammaray_core Qt::Gui Qt::CorePrivate)
-    if(TARGET Qt6::OpenGL)
+    if(QT_VERSION_MAJOR EQUAL 6 AND TARGET Qt6::OpenGL)
         target_link_libraries(gammaray_openglsupport Qt6::OpenGL)
     endif()
 endif()
