--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -9,9 +9,9 @@
 
 # qdoc toolchain
 find_package(Qt${QT_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS Help)
-if(QT_VERSION_MAJOR EQUAL 5)
+if(${QT_VERSION_MAJOR} EQUAL 5)
     find_package(Qt${QT_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS AttributionsScannerTools)
-elseif(QT_VERSION_MAJOR GREATER_EQUAL 6)
+elseif(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     find_package(Qt${QT_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS ToolsTools)
 endif()
 
