--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -10,7 +10,7 @@
 if(${QT_VERSION_MAJOR} EQUAL 5 AND TARGET Qt5::Core)
     add_subdirectory(codecbrowser)
 endif()
-if((${QT_VERSION_MAJOR} EQUAL 5) OR (${QT_VERSION_MAJOR} EQUAL 6 AND TARGET Qt6::StateMachine))
+if(${QT_VERSION_MAJOR} EQUAL 5 OR TARGET Qt6::StateMachine)
     add_subdirectory(statemachineviewer)
 else()
     message(STATUS "WARNING: Skipping the statemachineviewer plugin since Qt6StateMachine was not found")
