--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Configure project
         run: >
           cmake -S . -G Ninja --preset ${{ matrix.config.preset }}
-          -DGAMMARAY_WITH_KDSME=${{ runner.os == 'Linux' }}
+          -DGAMMARAY_WITH_KDSME=${{ runner.os == 'Linux' && matrix.config.qt_version == "5.15" }}
           -DGAMMARAY_BUILD_DOCS=${{ runner.os == 'Linux' }}
 
       - name: Build Project
