--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
 
           - preset: ci-dev-client-and-ui-qt6
             qt_version: "6.5.*"
+            qt_modules: qtscxml
             tests_with: qt6
 
           - preset: ci-dev-probe-only-qt5
@@ -46,6 +47,7 @@ jobs:
 
           - preset: ci-dev-probe-only-qt6
             qt_version: "6.5.*"
+            qt_modules: qtscxml
 
     steps:
       - name: Install Qt with options and default aqtversion
@@ -102,7 +104,7 @@ jobs:
         # quickmaterialtest|quicktexturetest fails because of QT_QUICK_BACKEND=software AND QT_QPA_PLATFORM=offscreen
         # quickinspectortest|quickinspectortest2 fails at CI, local with 6.2.4 passes
       - name: Run tests on Linux Qt6 (offscreen)
-        if: ${{ runner.os == 'Linux' && matrix.config.tests_with == 'qt6' }}
+        if: ${{ runner.os == 'Linux' }}
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex "quickmaterialtest|quicktexturetest|quickinspectortest|quickinspectortest2"
