--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
         config:
           - preset: ci-dev-client-only-qt5
             qt_version: "5.15"
+            cmake_osx_architectures: "x86_64"
             tests_with: qt5
 
           - preset: ci-dev-client-only-qt6
@@ -35,17 +36,32 @@ jobs:
 
           - preset: ci-dev-client-and-ui-qt5
             qt_version: "5.15"
+            cmake_osx_architectures: "x86_64"
             tests_with: qt5
 
           - preset: ci-dev-client-and-ui-qt6
             qt_version: "6.5.*"
+            qt_modules: qtscxml
             tests_with: qt6
 
           - preset: ci-dev-probe-only-qt5
             qt_version: "5.15"
+            cmake_osx_architectures: "x86_64"
 
           - preset: ci-dev-probe-only-qt6
             qt_version: "6.5.*"
+            qt_modules: qtscxml
+
+        # GitHub actions is now powered by AppleSilicon macs
+        # and these presets are failing
+        exclude:
+          - os: macos-latest
+            config:
+              preset: ci-dev-client-and-ui-qt5
+
+          - os: macos-latest
+            config:
+              preset: ci-dev-client-and-ui-qt6
 
     steps:
       - name: Install Qt with options and default aqtversion
@@ -77,6 +93,7 @@ jobs:
       - name: Configure project
         run: >
           cmake -S . -G Ninja --preset ${{ matrix.config.preset }}
+          -DCMAKE_OSX_ARCHITECTURES=${{ matrix.config.cmake_osx_architectures}}
           -DGAMMARAY_WITH_KDSME=${{ runner.os == 'Linux' }}
           -DGAMMARAY_BUILD_DOCS=${{ runner.os == 'Linux' }}
 
