--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -975,7 +975,7 @@ set(CPACK_RPM_PACKAGE_GROUP "Development/Tools")
 set(CPACK_DEBIAN_PACKAGE_SECTION "Development")
 
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/${README_FILE}")
-set(ICONS_DIR "${CMAKE_SOURCE_DIR}/resources")
+set(ICONS_DIR "${CMAKE_SOURCE_DIR}/ui/resources/gammaray")
 if(WIN32)
     set(CPACK_GENERATOR "NSIS" "ZIP")
     set(CPACK_PACKAGE_EXECUTABLES "GammaRay" "GammaRay")
@@ -983,8 +983,9 @@ if(WIN32)
     set(CPACK_PACKAGE_FILE_NAME "GammaRay ${GAMMARAY_VERSION}")
     set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/${LICENSE_FILE}")
     set(CPACK_NSIS_EXECUTABLES_DIRECTORY "${BIN_INSTALL_DIR}")
+    set(CPACK_NSIS_MANIFEST_DPI_AWARE TRUE)
     set(CPACK_NSIS_MUI_ICON "${ICONS_DIR}/GammaRay.ico")
-    #set(CPACK_PACKAGE_ICON "${ICONS_DIR}\\\\CharmNSISHeader.bmp")
+    #set(CPACK_PACKAGE_ICON "${ICONS_DIR}/TODO.bmp")
     set(CPACK_NSIS_URL_INFO_ABOUT "https://www.kdab.com/")
     set(CPACK_NSIS_INSTALLED_ICON_NAME "GammaRay${CMAKE_EXECUTABLE_SUFFIX}")
     set(CPACK_NSIS_MENU_LINKS "${LICENSE_FILE}" "License" "${README_FILE}" "Readme")
@@ -995,9 +996,9 @@ elseif(APPLE)
     set(CPACK_DMG_VOLUME_NAME "GammaRay")
     set(CPACK_SYSTEM_NAME "OSX")
     set(CPACK_PACKAGE_FILE_NAME "GammaRay-${GAMMARAY_VERSION}")
-    set(CPACK_PACKAGE_ICON "${ICONS_DIR}/CharmDMG.icns")
-    set(CPACK_DMG_DS_STORE "${ICONS_DIR}/CharmDSStore")
-    set(CPACK_DMG_BACKGROUND_IMAGE "${ICONS_DIR}/CharmDMGBackground.png")
+    set(CPACK_PACKAGE_ICON "${ICONS_DIR}/GammaRay.icns")
+    # set(CPACK_DMG_DS_STORE "${ICONS_DIR}/TODO_DSStore")
+    # set(CPACK_DMG_BACKGROUND_IMAGE "${ICONS_DIR}/TODO_DMGBackground.png")
 elseif(UNIX)
     set(CPACK_SYSTEM_NAME "${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
 endif()
