--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,9 +79,12 @@
 
 cmake_minimum_required(VERSION 3.16.0)
 
+file(STRINGS version.txt GAMMARAY_VERSION_FILE)
+list(GET GAMMARAY_VERSION_FILE 0 GammaRay_VERSION)
+
 project(
     GammaRay
-    VERSION 3.2.0
+    VERSION ${GammaRay_VERSION}
     LANGUAGES CXX C
 )
 
@@ -193,8 +196,8 @@ set(GAMMARAY_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(GAMMARAY_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 set(GAMMARAY_VERSION ${PROJECT_VERSION})
 set(GAMMARAY_VERSION_STRING "${GAMMARAY_VERSION}")
-set(GAMMARAY_SOVERSION "3.2.0")
-set(GAMMARAY_PLUGIN_VERSION "3.2")
+set(GAMMARAY_SOVERSION "${GAMMARAY_VERSION_MAJOR}.${GAMMARAY_VERSION_MINOR}.${GAMMARAY_VERSION_PATCH}")
+set(GAMMARAY_PLUGIN_VERSION "${GAMMARAY_VERSION_MAJOR}.${GAMMARAY_VERSION_MINOR}")
 set(PROJECT_VERSION_STRING "${GAMMARAY_VERSION_STRING}")
 if(ANDROID)
     # non-rooted Android doesn't like .so versions and requires the lib prefix
